# Rust_Search

./: Cargo.toml
src/: builder.rs  search.rs
